--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
           <%= link_to "ログイン", new_user_session_path %>
         </li>
       <% end %>
+
+      <!--便宜上追加-->
+      <%= link_to "index", post_images_path %>
+      <!--ここまで-->
+
     </header>
 
     <%= yield %>
