--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,3 +1,4 @@
+<!--投稿内容-->
 <div>
   <%= image_tag @post_image.get_image %>
   <p>ショップ名 : <%= @post_image.shop_name %></p>
@@ -9,3 +10,27 @@
    <%= link_to "削除", post_image_path(@post_image), method: :delete %>
   <% end %>
 </div>
+
+<!--コメント一覧-->
+<div>
+  <p>コメント件数 : <%= @post_image.post_comments.count %></p>
+  <% @post_image.post_comments.each do |post_comment| %>
+    <p><%= image_tag post_comment.user.get_profile_image(100, 100) %></p>
+    <%= post_comment.user.name %>
+    <%= post_comment.created_at.strftime('%Y%m%d') %><%=post_comment.comment %>
+    <% if post_comment.user == current_user %>
+      <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+    <% end %>
+  <% end %>
+</div>
+
+<!--コメント入力フォーム-->
+<div>
+  <!-------------------------↓-------------↓-------=>親子関係で依存しているので変数が2つ必要-->
+  <%= form_with model: [@post_image, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', plaseholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
+
+
