--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,10 @@
   <p>ショップ名 : <%= post_image.shop_name %></p>
   <p>説明 : <%= post_image.caption %></p>
   <p>ユーザーネーム : <%= post_image.user.name %></p>
+  <!--コメント件数とリンク-->
+  <p>
+    <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
+  </p>
 </div>
 <% end %>
+
