--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,22 +1,37 @@
 <!--post_image#index, user#showの部分テンプレ－ト(共通化)ファイル-->
 
 <!--ユーザーの投稿一覧-->
-<!--インスタンス変数=>ローカル変数に変更(使いやすくするため)-->
-<% post_images.each do |post_image| %>
-<div>
-  <%=link_to post_image_path(post_image.id) do %>
-    <%= image_tag post_image.get_image %>
+<div class="card-list-container py-5">
+  <!--インスタンス変数=>ローカル変数に変更(使いやすくするため)-->
+  <% post_images.each do |post_image| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%=link_to post_image_path(post_image.id) do %>
+      <%= image_tag post_image.get_image, class: "card-img-top"; %>
+    <% end %>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= image_tag post_image.user.get_profile_image(100, 100), class: "mt-3 rouded-circle"; %>
+        </div>
+      </div>
+      <div class="col-10">
+        <p class="card-title">
+          <%= link_to(post_image_path(post_image.id), class: "text-dark") do %>
+            <strong>
+              <i class="far fa-flag"></i>
+              <span> <%= post_image.shop_name %></span>
+            </strong>
+          <% end %>
+        </p>
+        <p class="card-text">説明 : <%= post_image.caption %></p>
+        <span><i class="far fa-user"></i> By <%= post_image.user.name %> | </span>
+        <span>
+          <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class: "text-dark" %>
+        </span>
+      </div>
+    </div>
+  </div>
   <% end %>
-
-  <p>投稿ユーザー画像 : <%= image_tag post_image.user.get_profile_image(100, 100) %></p>
-  <p>ショップ名 : <%= post_image.shop_name %></p>
-  <p>説明 : <%= post_image.caption %></p>
-  <p>ユーザーネーム : <%= post_image.user.name %></p>
-  <!--コメント件数の表示とリンク-->
-  <p>
-    <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
-  </p>
+  <%= paginate post_images %>
 </div>
-<% end %>
 
-<%= paginate post_images %>
